Fixed horizontal scrollbars down to 658px screensize

--- a/src/components/graphs/linegraph/LineGraph.css
+++ b/src/components/graphs/linegraph/LineGraph.css
@@ -1,4 +1,5 @@
 div canvas {
   background-color: #fff;
+  width: 100%;
 }
 /*# sourceMappingURL=LineGraph.css.map */
